diff ResNet models

--- a/ResNet18.ipynb
+++ b/ResNet18.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
-    "from tensorflow.keras.applications import ResNet50\n",
+    "from tensorflow.keras.applications import ResNet50V2  # Replace with ResNet18 if using custom or third-party implementation\n",
     "from tensorflow.keras.layers import Dense, GlobalAveragePooling2D\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -17,31 +17,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 1: Load the Stanford Dogs dataset\n",
+    "(train_data, test_data), info = tfds.load('stanford_dogs', split=['train', 'test'], with_info=True, as_supervised=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: Preprocess the data\n",
+    "IMG_SIZE = (224, 224)\n",
+    "def preprocess(image, label):\n",
+    "    image = tf.image.resize(image, IMG_SIZE)\n",
+    "    image = tf.cast(image, tf.float32) / 255.0\n",
+    "    return image, label"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Load the Stanford Dogs dataset from TensorFlow Datasets\n",
-    "(train_data, test_data), info = tfds.load('stanford_dogs', split=['train', 'test'], \n",
-    "                                          with_info=True, as_supervised=True)"
+    "train_data = train_data.map(preprocess).batch(32).prefetch(buffer_size=tf.data.AUTOTUNE)\n",
+    "test_data = test_data.map(preprocess).batch(32).prefetch(buffer_size=tf.data.AUTOTUNE)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50v2_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "\u001b[1m94668760/94668760\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 0us/step\n"
+     ]
+    }
+   ],
    "source": [
-    "# Step 2: Preprocess the data (Resize and Normalize)\n",
-    "IMG_SIZE = (224, 224)\n",
-    "\n",
-    "def preprocess(image, label):\n",
-    "    image = tf.image.resize(image, IMG_SIZE)  # Resize images to 224x224\n",
-    "    image = tf.cast(image, tf.float32) / 255.0  # Normalize to [0, 1]\n",
-    "    return image, label\n",
-    "\n",
-    "train_data = train_data.map(preprocess).batch(32).prefetch(buffer_size=tf.data.AUTOTUNE)\n",
-    "test_data = test_data.map(preprocess).batch(32).prefetch(buffer_size=tf.data.AUTOTUNE)"
+    "# Step 3: Load the pre-trained ResNet18 model (use ResNet50V2 as placeholder)\n",
+    "base_model = ResNet50V2(weights='imagenet', include_top=False, input_shape=(224, 224, 3))"
    ]
   },
   {
@@ -50,8 +74,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 3: Load the pre-trained ResNet50 model\n",
-    "base_model = ResNet50(weights='imagenet', include_top=False, input_shape=(224, 224, 3))"
+    "# Step 4: Add custom layers\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "x = Dense(512, activation='relu')(x)\n",
+    "predictions = Dense(120, activation='softmax')(x)"
    ]
   },
   {
@@ -60,19 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 4: Add Custom Classification Layers \n",
     "\n",
-    "# Add a global average pooling layer\n",
-    "x = base_model.output\n",
-    "x = GlobalAveragePooling2D()(x)\n",
-    "\n",
-    "# Add a fully-connected layer\n",
-    "x = Dense(512, activation='relu')(x)\n",
-    "\n",
-    "# Add a logistic layer for classification (Stanford Dogs dataset has 120 classes)\n",
-    "predictions = Dense(120, activation='softmax')(x)\n",
-    "\n",
-    "# Create the full model\n",
+    "# Step 5: Create the full model\n",
     "model = Model(inputs=base_model.input, outputs=predictions)"
    ]
   },
@@ -82,10 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 5: Freeze the Base Model Layers\n",
-    "\n",
+    "# Step 6: Freeze the base model layers\n",
     "for layer in base_model.layers:\n",
-    "    layer.trainable = False\n"
+    "    layer.trainable = False"
    ]
   },
   {
@@ -94,8 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 6: Compile the Model\n",
-    "\n",
+    "# Step 7: Compile the model\n",
     "model.compile(optimizer=Adam(learning_rate=0.001),\n",
     "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])"
@@ -103,44 +117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-01-09 01:09:07.763661: I tensorflow/core/kernels/data/tf_record_dataset_op.cc:376] The default buffer size is 262144, which is overridden by the user specified `buffer_size` of 8388608\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m372/375\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m4:19\u001b[0m 87s/step - accuracy: 0.0090 - loss: 4.8484"
+     "ename": "NameError",
+     "evalue": "name 'ReduceLROnPlateau' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Step 8: Train the top layers\u001b[39;00m\n\u001b[1;32m      2\u001b[0m callbacks \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m----> 3\u001b[0m     ReduceLROnPlateau(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m, factor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m, patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m, min_lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.00001\u001b[39m),\n\u001b[1;32m      4\u001b[0m     EarlyStopping(monitor\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m, patience\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, restore_best_weights\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m ]\n\u001b[1;32m      7\u001b[0m history \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mfit(train_data, epochs\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, validation_data\u001b[38;5;241m=\u001b[39mtest_data, callbacks\u001b[38;5;241m=\u001b[39mcallbacks)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ReduceLROnPlateau' is not defined"
      ]
     }
    ],
    "source": [
-    "# Step 7: Train the Top Layers\n",
-    "\n",
-    "# Add callbacks for better training control\n",
+    "# Step 8: Train the top layers\n",
     "callbacks = [\n",
     "    ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=3, min_lr=0.00001),\n",
     "    EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
     "]\n",
     "\n",
-    "history = model.fit(train_data,\n",
-    "                    epochs=5,\n",
-    "                    validation_data=test_data,\n",
-    "                    callbacks=callbacks)"
+    "history = model.fit(train_data, epochs=10, validation_data=test_data, callbacks=callbacks)\n"
    ]
   },
   {
@@ -152,11 +151,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 8: Fine-Tune the Important Filters (AdaFilter Implementation)\n",
+    "# Step 9: Fine-Tune the Important Filters (AdaFilter Implementation)\n",
     "\n",
     "# 1. Identify Important Filters:\n",
     "\n",
@@ -172,21 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# 2. Fine-Tune Important Filters:\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Assuming 'conv4_block1_1_conv' is a layer name you want to fine-tune\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m important_filters \u001b[38;5;241m=\u001b[39m get_important_filters(model, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconv4_block1_1_conv\u001b[39m\u001b[38;5;124m'\u001b[39m, top_n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, layer \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(base_model\u001b[38;5;241m.\u001b[39mlayers):\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconv\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m layer\u001b[38;5;241m.\u001b[39mname:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Fine-Tune Important Filters:\n",
     "\n",
